# egyptology-viz

./: .gitignore  README.md  cleanup.ipynb  cleanup_script.py  codebook.md  imagesegypt_map_with_table.html  incomplete_pyramid_data.csv  pyproject.toml
Notebooks/: dani_new_book.ipynb  exploration.ipynb  jose_plotly.ipynb  plotly.ipynb  visualizations.ipynb
assets/: Condensed Pyramid Data copy (6-13-2024).xlsx  Monument_Metadata-Sullivan.xlsx  incomplete_pyramid_data.json  normalized_pyramid_data.csv  normalized_pyramid_data.json  pyramid_data.json  raw_pyramid_data.csv  raw_pyramid_data.json
images/: daniela-geocoded_map.html  egypt_map_with_table.html  zawiyet_map.html
src/cleanup/: cleanup_script.py  old_kingdom_pyramid_commands.csv
src/plots/: pyramid_height_bar.py  queens_height_scatter.py  queens_height_strip.py  timeline.py
templates/: template.html
tests/: cleanup_tests.py  test_commands.csv
