[project]
name = "Egyptology_Visualization_Project"
version = "0.0.1"
authors = [
	{ name="Jose Harvey", email="jose_harvey@brown.edu" }
]
description = "This project aims to implement a tool to visualize the evolution of pyramid building during the Pyramid Age"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/brown-ccv/egyptology-viz"
Issues = "https://github.com/brown-ccv/egyptology-viz/issues"
